[gd_scene load_steps=14 format=3 uid="uid://dbfbvu7un6xv7"]

[ext_resource type="Texture2D" uid="uid://dqx70uykmhu27" path="res://assets/davidbeefcake-Sheet.png" id="1_fudp7"]
[ext_resource type="Script" path="res://Scripts/david_charge.gd" id="1_vkqoq"]
[ext_resource type="Script" path="res://Scripts/test.gd" id="2_30y7x"]
[ext_resource type="Texture2D" uid="uid://dpejld556bj5r" path="res://assets/davidbeefcakewalk-Sheet.png" id="3_ofpyl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_iftrb"]
atlas = ExtResource("1_fudp7")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsw32"]
atlas = ExtResource("3_ofpyl")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_5apn1"]
atlas = ExtResource("3_ofpyl")
region = Rect2(1000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7xx3"]
atlas = ExtResource("3_ofpyl")
region = Rect2(2000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4kcd"]
atlas = ExtResource("3_ofpyl")
region = Rect2(3000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfsp8"]
atlas = ExtResource("3_ofpyl")
region = Rect2(4000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmd05"]
atlas = ExtResource("3_ofpyl")
region = Rect2(5000, 0, 1000, 1000)

[sub_resource type="SpriteFrames" id="SpriteFrames_cvrog"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iftrb")
}],
"loop": true,
"name": &"Idl",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsw32")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5apn1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7xx3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4kcd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfsp8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmd05")
}],
"loop": true,
"name": &"Walk",
"speed": 20.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y2wik"]
size = Vector2(78, 20)

[node name="DavidCharge" type="Container"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_vkqoq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
self_modulate = Color(1, 0.19, 0.8785, 1)
position = Vector2(20, 22)
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_cvrog")
animation = &"Walk"
autoplay = "Walk"
frame_progress = 0.022611

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(60, 25)
scale = Vector2(1, 1.01147)
collision_layer = 2
script = ExtResource("2_30y7x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(-60, -3)
shape = SubResource("RectangleShape2D_y2wik")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="area_entered" from="AttackArea" to="." method="_on_attack_area_area_entered"]
[connection signal="area_exited" from="AttackArea" to="." method="_on_attack_area_area_exited"]
